# bittrade-kraken-rest

./: .flake8  .gitignore  CHANGELOG.md  README.md  kraken.py  pyproject.toml  pyrightconfig.json
bittrade_kraken_rest/: __init__.py
bittrade_kraken_rest/connection/: __init__.py  nonce.py  observable.py  result.py
bittrade_kraken_rest/connection/signature/: __init__.py
bittrade_kraken_rest/endpoints/: raw.py
bittrade_kraken_rest/endpoints/private/: __init__.py  account_balance.py  add_order.py  add_order_batch.py  cancel_all.py  cancel_order.py  cancel_order_batch.py  extended_balance.py  get_account_balance.py  get_open_orders.py  get_websockets_token.py  open_orders.py  query_order.py  status_of_recent_deposits.py  status_of_recent_withdrawals.py  trade_balance.py  trade_history.py  websockets_token.py  withdraw_funds.py  withdrawal_addresses.py  withdrawal_info.py  withdrawal_methods.py
bittrade_kraken_rest/endpoints/public/: __init__.py  depth.py  get_server_time.py  get_system_status.py  server_time.py  system_status.py  ticker.py
bittrade_kraken_rest/environment/: cli.py  decorators.py
bittrade_kraken_rest/exceptions/: error.py
bittrade_kraken_rest/models/: __init__.py  message.py  order.py  request.py  trade.py
bittrade_kraken_rest/models/private/: get_account_balance.py  get_open_orders.py  get_websockets_token.py  trade_balance.py  websockets_token.py
bittrade_kraken_rest/models/public/: get_server_time.py  get_system_status.py
bittrade_kraken_rest/models/websocket/: cancel_all.py
sample_websockets/: addOrder.json  cancelAll.json  editOrder.json  editOrder_oflags.json
tests/: test_bittrade_kraken_rest.py  test_connection_observable.py  test_request.py
tests/integration/: test_cancel_all.py  test_get_account_balance.py  test_get_depth.py  test_get_open_orders.py  test_get_server_time.py  test_get_system_status.py  test_get_trade_history.py  test_get_websockets_token.py  test_ticker.py
