[tool.poetry]
name = "bittrade-kraken-rest"
version = "0.9.1"
description = "Kraken REST library with an optional CLI"
authors = ["Matt Kho <matt@techspace.asia>"]
readme = "README.md"
homepage = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"
repository = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
rich = {version = "^12.6.0", optional = true}
fire = {version = "^0.5.0", optional = true}
websocket-client = {version = "^1.4.2", optional = true}
orjson = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
fire = ["rich", "fire", "websocket-client"]
