[tool.poetry]
name = "bittrade-kraken-rest"
version = "0.10.0"
description = "Kraken REST library"
authors = ["Matt Kho <matt@techspace.asia>"]
readme = "README.md"
homepage = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"
repository = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
orjson = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

