[tool.poetry]
name = "bittrade-kraken-rest"
version = "0.13.7"
description = "Kraken REST library"
authors = ["Matt Kho <matt@techspace.asia>"]
readme = "README.md"
homepage = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"
repository = "https://github.com/TechSpaceAsia/bittrade-kraken-rest"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
orjson = "^3.8.3"
pydantic = "^1.10.4"
reactivex = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"

[tool.poetry.group.dev.dependencies]
responses = "^0.22.0"
black = "^22.12.0"
isort = "^5.11.4"
pyright = "^1.1.287"
mypy = "^0.991"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88              # corresponds to -w  flag
multi_line_output = 3         # corresponds to -m  flag
include_trailing_comma = true # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'   # isort all Python files
float_to_top = true
